src/gui/text/qtextengine.cpp
@@ -2603,6 +2603,7 @@ QTextEngine::LayoutData::LayoutData()
     hasBidi = false;
     layoutState = LayoutEmpty;
     haveCharAttributes = false;
+    previousLineManuallyWrapped = false;
     logClustersPtr = nullptr;
     available_glyphs = 0;
 }
@@ -2637,6 +2638,7 @@ QTextEngine::LayoutData::LayoutData(const QString &str, void **stack_memory, int
     hasBidi = false;
     layoutState = LayoutEmpty;
     haveCharAttributes = false;
+    previousLineManuallyWrapped = false;
 }
 
 QTextEngine::LayoutData::~LayoutData()
@@ -2722,6 +2724,7 @@ void QTextEngine::freeMemory()
         layoutData->hasBidi = false;
         layoutData->layoutState = LayoutEmpty;
         layoutData->haveCharAttributes = false;
+        layoutData->previousLineManuallyWrapped = false;
         layoutData->items.clear();
     }
     if (specialData)
