src/gui/text/qtextlayout.cpp
@@ -1808,6 +1808,7 @@ void QTextLine::layout_helper(int maxGlyphs)
     lbh.logClusters = eng->layoutData->logClustersPtr;
     lbh.previousGlyph = 0;
 
+    bool manuallyWrapped = false;
     bool hasInlineObject = false;
     QFixed maxInlineObjectHeight = 0;
 
@@ -1883,6 +1884,7 @@ void QTextLine::layout_helper(int maxGlyphs)
                 lbh.calculateRightBearingForPreviousGlyph();
             }
             line += lbh.tmpData;
+            manuallyWrapped = true;
             goto found;
         } else if (current.analysis.flags == QScriptAnalysis::Object) {
             lbh.whiteSpaceOrObject = true;
@@ -2105,7 +2107,10 @@ found:
         eng->maxWidth = qMax(eng->maxWidth, line.textWidth);
     } else {
         eng->minWidth = qMax(eng->minWidth, lbh.minw);
-        eng->maxWidth += line.textWidth;
+        if (eng->layoutData->previousLineManuallyWrapped)
+            eng->maxWidth = qMax(eng->maxWidth, line.textWidth);
+        else
+            eng->maxWidth += line.textWidth;
     }
 
     if (line.textWidth > 0 && item < eng->layoutData->items.size())
@@ -2119,6 +2124,8 @@ found:
 
     line.justified = false;
     line.gridfitted = false;
+
+    eng->layoutData->previousLineManuallyWrapped = manuallyWrapped;
 }
 
 /*!
